--- a/2020-02/2020-02-27-1.ipynb
+++ b/2020-02/2020-02-27-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -63,211 +63,21 @@
      "text": [
       "Train on 40000 samples, validate on 10000 samples\n",
       "Epoch 1/100\n",
-      "40000/40000 [==============================] - 3s 85us/step - loss: 1.9409 - acc: 0.2976 - val_loss: 1.8365 - val_acc: 0.3413\n",
+      "40000/40000 [==============================] - 14s 342us/step - loss: 1.9492 - accuracy: 0.2973 - val_loss: 1.8332 - val_accuracy: 0.3452\n",
       "Epoch 2/100\n",
-      "40000/40000 [==============================] - 3s 74us/step - loss: 1.7614 - acc: 0.3697 - val_loss: 1.7283 - val_acc: 0.3826\n",
+      "40000/40000 [==============================] - 11s 276us/step - loss: 1.7562 - accuracy: 0.3746 - val_loss: 1.7239 - val_accuracy: 0.3851\n",
       "Epoch 3/100\n",
-      "40000/40000 [==============================] - 3s 73us/step - loss: 1.6842 - acc: 0.3984 - val_loss: 1.6861 - val_acc: 0.4052\n",
+      "40000/40000 [==============================] - 11s 275us/step - loss: 1.6830 - accuracy: 0.4006 - val_loss: 1.6910 - val_accuracy: 0.4020\n",
       "Epoch 4/100\n",
-      "40000/40000 [==============================] - 3s 84us/step - loss: 1.6374 - acc: 0.4170 - val_loss: 1.6555 - val_acc: 0.4152\n",
+      "40000/40000 [==============================] - 12s 292us/step - loss: 1.6480 - accuracy: 0.4100 - val_loss: 1.6647 - val_accuracy: 0.4057\n",
       "Epoch 5/100\n",
-      "40000/40000 [==============================] - 3s 74us/step - loss: 1.6041 - acc: 0.4286 - val_loss: 1.6588 - val_acc: 0.4083\n",
+      "40000/40000 [==============================] - 12s 294us/step - loss: 1.6138 - accuracy: 0.4255 - val_loss: 1.6850 - val_accuracy: 0.4001\n",
       "Epoch 6/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.5718 - acc: 0.4395 - val_loss: 1.6401 - val_acc: 0.4166\n",
+      "40000/40000 [==============================] - 13s 318us/step - loss: 1.5772 - accuracy: 0.4364 - val_loss: 1.5879 - val_accuracy: 0.4340\n",
       "Epoch 7/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.5440 - acc: 0.4506 - val_loss: 1.5840 - val_acc: 0.4387\n",
+      "40000/40000 [==============================] - 12s 308us/step - loss: 1.5559 - accuracy: 0.4434 - val_loss: 1.6045 - val_accuracy: 0.4322\n",
       "Epoch 8/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.5235 - acc: 0.4547 - val_loss: 1.5828 - val_acc: 0.4409\n",
-      "Epoch 9/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.5031 - acc: 0.4631 - val_loss: 1.5677 - val_acc: 0.4446\n",
-      "Epoch 10/100\n",
-      "40000/40000 [==============================] - 3s 69us/step - loss: 1.4901 - acc: 0.4711 - val_loss: 1.5460 - val_acc: 0.4540\n",
-      "Epoch 11/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.4707 - acc: 0.4739 - val_loss: 1.5795 - val_acc: 0.4377\n",
-      "Epoch 12/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.4539 - acc: 0.4815 - val_loss: 1.5972 - val_acc: 0.4460\n",
-      "Epoch 13/100\n",
-      "40000/40000 [==============================] - 3s 73us/step - loss: 1.4491 - acc: 0.4834 - val_loss: 1.5855 - val_acc: 0.4396\n",
-      "Epoch 14/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.4340 - acc: 0.4896 - val_loss: 1.5399 - val_acc: 0.4626\n",
-      "Epoch 15/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.4280 - acc: 0.4912 - val_loss: 1.5522 - val_acc: 0.4550\n",
-      "Epoch 16/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.4224 - acc: 0.4932 - val_loss: 1.5286 - val_acc: 0.4548\n",
-      "Epoch 17/100\n",
-      "40000/40000 [==============================] - 3s 73us/step - loss: 1.4090 - acc: 0.4987 - val_loss: 1.4910 - val_acc: 0.4733\n",
-      "Epoch 18/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.4080 - acc: 0.5013 - val_loss: 1.5059 - val_acc: 0.4701\n",
-      "Epoch 19/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.3938 - acc: 0.5036 - val_loss: 1.5032 - val_acc: 0.4722\n",
-      "Epoch 20/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.3897 - acc: 0.5061 - val_loss: 1.5111 - val_acc: 0.4669\n",
-      "Epoch 21/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.3777 - acc: 0.5082 - val_loss: 1.5353 - val_acc: 0.4602\n",
-      "Epoch 22/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.3676 - acc: 0.5138 - val_loss: 1.5037 - val_acc: 0.4658\n",
-      "Epoch 23/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.3719 - acc: 0.5126 - val_loss: 1.5010 - val_acc: 0.4701\n",
-      "Epoch 24/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.3631 - acc: 0.5142 - val_loss: 1.4786 - val_acc: 0.4814\n",
-      "Epoch 25/100\n",
-      "40000/40000 [==============================] - 3s 78us/step - loss: 1.3537 - acc: 0.5172 - val_loss: 1.4823 - val_acc: 0.4806\n",
-      "Epoch 26/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.3465 - acc: 0.5192 - val_loss: 1.4965 - val_acc: 0.4747\n",
-      "Epoch 27/100\n",
-      "40000/40000 [==============================] - 3s 73us/step - loss: 1.3435 - acc: 0.5213 - val_loss: 1.4764 - val_acc: 0.4779\n",
-      "Epoch 28/100\n",
-      "40000/40000 [==============================] - 3s 77us/step - loss: 1.3417 - acc: 0.5247 - val_loss: 1.5243 - val_acc: 0.4722\n",
-      "Epoch 29/100\n",
-      "40000/40000 [==============================] - 3s 76us/step - loss: 1.3352 - acc: 0.5216 - val_loss: 1.5000 - val_acc: 0.4765\n",
-      "Epoch 30/100\n",
-      "40000/40000 [==============================] - 3s 74us/step - loss: 1.3301 - acc: 0.5268 - val_loss: 1.4771 - val_acc: 0.4810\n",
-      "Epoch 31/100\n",
-      "40000/40000 [==============================] - 3s 76us/step - loss: 1.3288 - acc: 0.5263 - val_loss: 1.5105 - val_acc: 0.4671\n",
-      "Epoch 32/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.3185 - acc: 0.5304 - val_loss: 1.4917 - val_acc: 0.4771\n",
-      "Epoch 33/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.3142 - acc: 0.5324 - val_loss: 1.5031 - val_acc: 0.4767\n",
-      "Epoch 34/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.3124 - acc: 0.5332 - val_loss: 1.4697 - val_acc: 0.4866\n",
-      "Epoch 35/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.3109 - acc: 0.5346 - val_loss: 1.4889 - val_acc: 0.4838\n",
-      "Epoch 36/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.3005 - acc: 0.5372 - val_loss: 1.5123 - val_acc: 0.4822\n",
-      "Epoch 37/100\n",
-      "40000/40000 [==============================] - 3s 80us/step - loss: 1.3005 - acc: 0.5360 - val_loss: 1.4769 - val_acc: 0.4832\n",
-      "Epoch 38/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.2992 - acc: 0.5388 - val_loss: 1.5407 - val_acc: 0.4680\n",
-      "Epoch 39/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.2899 - acc: 0.5412 - val_loss: 1.4748 - val_acc: 0.4861\n",
-      "Epoch 40/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.2846 - acc: 0.5408 - val_loss: 1.4748 - val_acc: 0.4859\n",
-      "Epoch 41/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.2856 - acc: 0.5430 - val_loss: 1.4791 - val_acc: 0.4825\n",
-      "Epoch 42/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.2853 - acc: 0.5430 - val_loss: 1.4872 - val_acc: 0.4833\n",
-      "Epoch 43/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.2773 - acc: 0.5451 - val_loss: 1.5833 - val_acc: 0.4455\n",
-      "Epoch 44/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.2781 - acc: 0.5449 - val_loss: 1.5268 - val_acc: 0.4717\n",
-      "Epoch 45/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.2707 - acc: 0.5473 - val_loss: 1.4861 - val_acc: 0.4897\n",
-      "Epoch 46/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.2612 - acc: 0.5498 - val_loss: 1.4850 - val_acc: 0.4890\n",
-      "Epoch 47/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.2649 - acc: 0.5502 - val_loss: 1.5271 - val_acc: 0.4702\n",
-      "Epoch 48/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.2632 - acc: 0.5491 - val_loss: 1.4851 - val_acc: 0.4853\n",
-      "Epoch 49/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.2563 - acc: 0.5521 - val_loss: 1.4828 - val_acc: 0.4878\n",
-      "Epoch 50/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.2584 - acc: 0.5523 - val_loss: 1.5435 - val_acc: 0.4727\n",
-      "Epoch 51/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.2495 - acc: 0.5551 - val_loss: 1.4979 - val_acc: 0.4784\n",
-      "Epoch 52/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.2517 - acc: 0.5553 - val_loss: 1.4932 - val_acc: 0.4854\n",
-      "Epoch 53/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.2481 - acc: 0.5546 - val_loss: 1.5093 - val_acc: 0.4776\n",
-      "Epoch 54/100\n",
-      "40000/40000 [==============================] - 3s 76us/step - loss: 1.2450 - acc: 0.5574 - val_loss: 1.5739 - val_acc: 0.4645\n",
-      "Epoch 55/100\n",
-      "40000/40000 [==============================] - 3s 73us/step - loss: 1.2420 - acc: 0.5562 - val_loss: 1.5169 - val_acc: 0.4810\n",
-      "Epoch 56/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.2345 - acc: 0.5608 - val_loss: 1.4973 - val_acc: 0.4839\n",
-      "Epoch 57/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.2377 - acc: 0.5598 - val_loss: 1.4881 - val_acc: 0.4854\n",
-      "Epoch 58/100\n",
-      "40000/40000 [==============================] - 3s 78us/step - loss: 1.2345 - acc: 0.5573 - val_loss: 1.4916 - val_acc: 0.4904\n",
-      "Epoch 59/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40000/40000 [==============================] - 3s 68us/step - loss: 1.2289 - acc: 0.5626 - val_loss: 1.5080 - val_acc: 0.4861\n",
-      "Epoch 60/100\n",
-      "40000/40000 [==============================] - 3s 68us/step - loss: 1.2256 - acc: 0.5632 - val_loss: 1.5268 - val_acc: 0.4829\n",
-      "Epoch 61/100\n",
-      "40000/40000 [==============================] - 3s 68us/step - loss: 1.2273 - acc: 0.5631 - val_loss: 1.5099 - val_acc: 0.4838\n",
-      "Epoch 62/100\n",
-      "40000/40000 [==============================] - 3s 67us/step - loss: 1.2187 - acc: 0.5659 - val_loss: 1.4893 - val_acc: 0.4904\n",
-      "Epoch 63/100\n",
-      "40000/40000 [==============================] - 3s 67us/step - loss: 1.2184 - acc: 0.5639 - val_loss: 1.5000 - val_acc: 0.4929\n",
-      "Epoch 64/100\n",
-      "40000/40000 [==============================] - 3s 68us/step - loss: 1.2204 - acc: 0.5653 - val_loss: 1.5267 - val_acc: 0.4769\n",
-      "Epoch 65/100\n",
-      "40000/40000 [==============================] - 3s 68us/step - loss: 1.2122 - acc: 0.5672 - val_loss: 1.5378 - val_acc: 0.4808\n",
-      "Epoch 66/100\n",
-      "40000/40000 [==============================] - 3s 73us/step - loss: 1.2125 - acc: 0.5706 - val_loss: 1.4913 - val_acc: 0.4881\n",
-      "Epoch 67/100\n",
-      "40000/40000 [==============================] - 4s 91us/step - loss: 1.2112 - acc: 0.5701 - val_loss: 1.5136 - val_acc: 0.4837\n",
-      "Epoch 68/100\n",
-      "40000/40000 [==============================] - 4s 111us/step - loss: 1.2126 - acc: 0.5684 - val_loss: 1.5136 - val_acc: 0.4837\n",
-      "Epoch 69/100\n",
-      "40000/40000 [==============================] - 3s 78us/step - loss: 1.2087 - acc: 0.5682 - val_loss: 1.5164 - val_acc: 0.4849\n",
-      "Epoch 70/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.2080 - acc: 0.5709 - val_loss: 1.5002 - val_acc: 0.4896\n",
-      "Epoch 71/100\n",
-      "40000/40000 [==============================] - 3s 74us/step - loss: 1.2051 - acc: 0.5719 - val_loss: 1.5104 - val_acc: 0.4817\n",
-      "Epoch 72/100\n",
-      "40000/40000 [==============================] - 3s 69us/step - loss: 1.2022 - acc: 0.5713 - val_loss: 1.5085 - val_acc: 0.4876\n",
-      "Epoch 73/100\n",
-      "40000/40000 [==============================] - 3s 74us/step - loss: 1.1916 - acc: 0.5743 - val_loss: 1.5748 - val_acc: 0.4697\n",
-      "Epoch 74/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.1984 - acc: 0.5722 - val_loss: 1.5137 - val_acc: 0.4881\n",
-      "Epoch 75/100\n",
-      "40000/40000 [==============================] - 3s 69us/step - loss: 1.2004 - acc: 0.5713 - val_loss: 1.5373 - val_acc: 0.4725\n",
-      "Epoch 76/100\n",
-      "40000/40000 [==============================] - 4s 100us/step - loss: 1.1908 - acc: 0.5751 - val_loss: 1.4925 - val_acc: 0.4958\n",
-      "Epoch 77/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.1862 - acc: 0.5757 - val_loss: 1.5144 - val_acc: 0.4874\n",
-      "Epoch 78/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.1915 - acc: 0.5745 - val_loss: 1.5099 - val_acc: 0.4910\n",
-      "Epoch 79/100\n",
-      "40000/40000 [==============================] - 3s 70us/step - loss: 1.1846 - acc: 0.5756 - val_loss: 1.5071 - val_acc: 0.4905\n",
-      "Epoch 80/100\n",
-      "40000/40000 [==============================] - 3s 77us/step - loss: 1.1881 - acc: 0.5761 - val_loss: 1.5250 - val_acc: 0.4841\n",
-      "Epoch 81/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.1822 - acc: 0.5785 - val_loss: 1.5446 - val_acc: 0.4800\n",
-      "Epoch 82/100\n",
-      "40000/40000 [==============================] - 3s 76us/step - loss: 1.1895 - acc: 0.5751 - val_loss: 1.5150 - val_acc: 0.4879\n",
-      "Epoch 83/100\n",
-      "40000/40000 [==============================] - 3s 73us/step - loss: 1.1819 - acc: 0.5796 - val_loss: 1.5053 - val_acc: 0.4910\n",
-      "Epoch 84/100\n",
-      "40000/40000 [==============================] - 3s 79us/step - loss: 1.1712 - acc: 0.5829 - val_loss: 1.4931 - val_acc: 0.4928\n",
-      "Epoch 85/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.1804 - acc: 0.5779 - val_loss: 1.5596 - val_acc: 0.4728\n",
-      "Epoch 86/100\n",
-      "40000/40000 [==============================] - 3s 71us/step - loss: 1.1773 - acc: 0.5814 - val_loss: 1.5527 - val_acc: 0.4725\n",
-      "Epoch 87/100\n",
-      "40000/40000 [==============================] - 3s 72us/step - loss: 1.1789 - acc: 0.5788 - val_loss: 1.5847 - val_acc: 0.4691\n",
-      "Epoch 88/100\n",
-      "40000/40000 [==============================] - 3s 86us/step - loss: 1.1737 - acc: 0.5803 - val_loss: 1.5065 - val_acc: 0.4918\n",
-      "Epoch 89/100\n",
-      "40000/40000 [==============================] - 3s 77us/step - loss: 1.1715 - acc: 0.5799 - val_loss: 1.5275 - val_acc: 0.4865\n",
-      "Epoch 90/100\n",
-      "40000/40000 [==============================] - 3s 77us/step - loss: 1.1711 - acc: 0.5824 - val_loss: 1.5326 - val_acc: 0.4816\n",
-      "Epoch 91/100\n",
-      "40000/40000 [==============================] - 3s 78us/step - loss: 1.1620 - acc: 0.5847 - val_loss: 1.5038 - val_acc: 0.4920\n",
-      "Epoch 92/100\n",
-      "40000/40000 [==============================] - 3s 79us/step - loss: 1.1686 - acc: 0.5813 - val_loss: 1.5484 - val_acc: 0.4812\n",
-      "Epoch 93/100\n",
-      "40000/40000 [==============================] - 3s 82us/step - loss: 1.1577 - acc: 0.5875 - val_loss: 1.5487 - val_acc: 0.4804\n",
-      "Epoch 94/100\n",
-      "40000/40000 [==============================] - 3s 79us/step - loss: 1.1567 - acc: 0.5856 - val_loss: 1.4979 - val_acc: 0.4978\n",
-      "Epoch 95/100\n",
-      "40000/40000 [==============================] - 3s 73us/step - loss: 1.1575 - acc: 0.5869 - val_loss: 1.5351 - val_acc: 0.4871\n",
-      "Epoch 96/100\n",
-      "40000/40000 [==============================] - 3s 81us/step - loss: 1.1564 - acc: 0.5854 - val_loss: 1.5498 - val_acc: 0.4815\n",
-      "Epoch 97/100\n",
-      "40000/40000 [==============================] - 3s 75us/step - loss: 1.1582 - acc: 0.5847 - val_loss: 1.5814 - val_acc: 0.4759\n",
-      "Epoch 98/100\n",
-      "40000/40000 [==============================] - 3s 82us/step - loss: 1.1549 - acc: 0.5887 - val_loss: 1.5488 - val_acc: 0.4798\n",
-      "Epoch 99/100\n",
-      "40000/40000 [==============================] - 3s 79us/step - loss: 1.1561 - acc: 0.5881 - val_loss: 1.5299 - val_acc: 0.4866\n",
-      "Epoch 100/100\n",
-      "40000/40000 [==============================] - 3s 78us/step - loss: 1.1533 - acc: 0.5863 - val_loss: 1.5355 - val_acc: 0.4843\n"
+      "39000/40000 [============================>.] - ETA: 0s - loss: 1.5376 - accuracy: 0.4473"
      ]
     }
    ],
@@ -457,13 +267,7 @@
       "40000/40000 [==============================] - 3s 80us/step - loss: 1.6536 - acc: 0.4032 - val_loss: 1.6230 - val_acc: 0.4166\n",
       "Epoch 58/100\n",
       "40000/40000 [==============================] - 3s 76us/step - loss: 1.6502 - acc: 0.4045 - val_loss: 1.6322 - val_acc: 0.4163\n",
-      "Epoch 59/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 59/100\n",
       "40000/40000 [==============================] - 3s 73us/step - loss: 1.6494 - acc: 0.4055 - val_loss: 1.6220 - val_acc: 0.4203\n",
       "Epoch 60/100\n",
       "40000/40000 [==============================] - 3s 72us/step - loss: 1.6470 - acc: 0.4068 - val_loss: 1.6339 - val_acc: 0.4120\n",
@@ -634,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
