--- a/2020-02/2020-03-06-GAN-distribution.ipynb
+++ b/2020-02/2020-03-06-GAN-distribution.ipynb
@@ -8699,64 +8699,39 @@
     }
    ],
    "source": [
-    "#import tensorflow.python.keras.backend as K\n",
-    "#sess = K.get_session()\n",
-    "#sess.run(tf.global_variables_initializer())\n",
-    "#keras.backend.get_session().run(tf.local_variables_initializer())\n",
-    "#keras.backend.get_session().run(tf.global_variables_initializer())\n",
     "machine = Machine(n_batch=1, ni_D=1000)\n",
     "machine.run(n_repeat=400, n_show=100, n_test=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.15.2'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "tf.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1.15.2\n",
       "[name: \"/device:CPU:0\"\n",
       "device_type: \"CPU\"\n",
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 1660169161090267425\n",
+      "incarnation: 6057242958502736950\n",
       ", name: \"/device:XLA_CPU:0\"\n",
       "device_type: \"XLA_CPU\"\n",
       "memory_limit: 17179869184\n",
       "locality {\n",
       "}\n",
-      "incarnation: 13775161659003328434\n",
+      "incarnation: 589915257607230299\n",
       "physical_device_desc: \"device: XLA_CPU device\"\n",
       ", name: \"/device:XLA_GPU:0\"\n",
       "device_type: \"XLA_GPU\"\n",
       "memory_limit: 17179869184\n",
       "locality {\n",
       "}\n",
-      "incarnation: 12618149536164005010\n",
+      "incarnation: 15914857147868314031\n",
       "physical_device_desc: \"device: XLA_GPU device\"\n",
       "]\n"
      ]
@@ -8764,7 +8739,7 @@
    ],
    "source": [
     "import tensorflow as tf\n",
-    "tf.__version__\n",
+    "print(tf.__version__)\n",
     "from tensorflow.python.client import device_lib\n",
     "print(device_lib.list_local_devices())"
    ]
